auth/oauth2-proxy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
        - args:
            - --provider=oidc
            - --email-domain=*
            - --upstream=file:///dev/null
            - --http-address=0.0.0.0:4180
            - --whitelist-domain=.terranblake.com
            - --cookie-domain=.terranblake.com
            - --cookie-expire=24h0m0s
            - --cookie-refresh=0h60m0s
            - --skip-provider-button
            - --set-authorization-header=true
            - --oidc-issuer-url=https://terranblake.us.auth0.com/
            - --login-url=https://terranblake.us.auth0.com/authorize
            - --redeem-url=https://terranblake.us.auth0.com/oauth/token
            - --validate-url=https://terranblake.us.auth0.com/userinfo
          image: quay.io/oauth2-proxy/oauth2-proxy:latest
          imagePullPolicy: Always
          name: oauth2-proxy
          ports:
            - containerPort: 4180
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: kube-system
spec:
  ports:
    - name: http
      port: 4180
      protocol: TCP
      targetPort: 4180
  selector:
    k8s-app: oauth2-proxy
